objects/OrderSummary.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Items__c</fullName>
        <label>Number of Items</label>
        <summarizedField>OrderItemSummary.Quantity</summarizedField>
        <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product_Summaries__c</fullName>
        <label>Order Product Summaries</label>
        <summarizedField>OrderItemSummary.Quantity</summarizedField>
        <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Display_Name__c</fullName>
        <formula>/* More Human-readable view of the order name, keyed on date */


IF( (TODAY() - DATEVALUE(CreatedDate) ) == 0,
/*If Today, say &quot;Today&quot; */
&quot;Ordered Today (#&quot; &amp; OrderNumber &amp; &quot;)&quot;,

IF( (TODAY() - DATEVALUE(CreatedDate) ) &lt; 6,
/*Else, if in the last week, say d/o week */
&quot;Ordered &quot; &amp;
CASE(WEEKDAY(DATEVALUE(CreatedDate)),
1,&quot;Sunday&quot;,
2,&quot;Monday&quot;,
3,&quot;Tuesday&quot;,
4,&quot;Wednesday&quot;,
5,&quot;Thursday&quot;,
6,&quot;Friday&quot;,
7,&quot;Saturday&quot;,
&quot;&quot;)&amp;
&quot; (#&quot; &amp; OrderNumber &amp; &quot;)&quot;,

/*Else, just show the date */
&quot;Ordered &quot; &amp;
CASE(MONTH(DATEVALUE(CreatedDate)),
1,&quot;January&quot;,
2,&quot;February&quot;,
3,&quot;March&quot;,
4,&quot;April&quot;,
5,&quot;May&quot;,
6,&quot;June&quot;,
7,&quot;July&quot;,
8,&quot;August&quot;,
9,&quot;September&quot;,
10,&quot;October&quot;,
11,&quot;November&quot;,
12,&quot;December&quot;,
&quot;&quot;)&amp; &quot; &quot; &amp;
TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;, &quot; &amp;
TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot; &quot; &amp;
&quot; (#&quot; &amp; OrderNumber &amp; &quot;)&quot;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Tracking__c</fullName>
        <label>Shipping Tracking</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>